# info_theory_llm_pref_elicitation

./: .gitignore  IMPROVEMENTS.md  OVERNIGHT_RUN.md  QUICK_START_V2.md  README.md  README_BESTOFN.md  WALKTHROUGH.md  install.sh  pyproject.toml  requirements.txt  run_ablations.py  run_bestofn_experiment.py  run_bestofn_verbose.py  run_experiment.py
experiments/: mve_cars.yml  mve_movies.yml  mve_one_persona.yml  mve_restaurants.yml
grpo_data_collection/: README.md  chat_with_model.py  collect_diverse_data.py  export_grpo_dataset.py  extract_and_combine_prompts.py  fast_collect_prompts.py  grpo_collector.py  online_reward.py  overnight_run.sh  overnight_run_v2.sh  overnight_run_v3.sh  question_generator.py  recollect_better_data.sh  run_diverse_training.sh  run_grpo_collection.py  test_saved_model.py  train_with_online_rewards.py  train_with_trl.py
grpo_data_collection/configs/: grpo_config.yml
src/pllm_mve/: __init__.py  config.py  eval_items.py  evaluator.py  io_utils.py  personas.py  pllm.py  qllm_policy.py  responder.py  rollout.py  scoring.py  together_client.py  types.py  verbose_logger.py
